feat: Support 8.18.0/9.0.0 and EDOT (#1081)
* feat: demo EDOT

* test: update docker configuration

* test: ignore tests

* fix: update index patterns

* fix: links

* fix: retrieve logs

* chore: remove deprecated

* fix: support APM and EDOT

* fix: add demo command and docs

* fix: migrate to apache-httpcomponents-client-5-api
fix: review ependencies

* fix: update test

* test: junit5

* test: stop SDK

* fix: HttpContext cast

* test: ignore IT test for the moment

* test: use @Disabled from JUnit5

* fix: select transaction type

* feat: grafana demo

* Apply suggestions from code review

Co-authored-by: Victor Martinez <victormartinezrubio@gmail.com>

---------

Co-authored-by: Victor Martinez <victormartinezrubio@gmail.com>